# paranoid-passwd

./: .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  STANDARDS.md  apko.yaml  configure  deny.toml  docker-compose.yml  index.html  melange.yaml  password_auditor.py  playwright.config.ts  release-please-config.json  sonar-project.properties  tox.ini
.agent-state/: decisions.ndjson  directive.md
.cargo/: config.toml
.github/: branch-protection.md  copilot-instructions.md  dependabot.yml
.github/actions/builder/: Dockerfile  action.yml  entrypoint.sh
.github/agents/: paranoid-security-auditor.md
.github/codeql/: codeql-config.yml
.github/instructions/: security-assurance.instructions.md
.github/workflows/: builder-image.yml  builder.yml  cd.yml  ci.yml  cli-release.yml  codeql.yml  deploy.yml  release.yml  scorecard.yml  security-assurance.yml
.remember/: .gitignore  remember.md
_extracted/: .gitmodules  paranoid.c  paranoid.h
builder/: Dockerfile
cmake/: wasm32-wasi.cmake  zig-cross.cmake
crates/paranoid-audit/: Cargo.toml
crates/paranoid-audit/src/: lib.rs
crates/paranoid-cli/: Cargo.toml
crates/paranoid-cli/src/: capability_detect.rs  lib.rs  main.rs  scripted.rs  theme.rs  tui.rs  vault_cli.rs  vault_tui.rs
crates/paranoid-cli/src/vault_tui/: footer.rs  mutation_handlers.rs  panel_rendering.rs  screen_state.rs
crates/paranoid-cli/tests/: tui_scripted.rs
crates/paranoid-core/: Cargo.toml
crates/paranoid-core/src/: lib.rs
crates/paranoid-gui/: Cargo.toml  build.rs
crates/paranoid-gui/src/: lib.rs  main.rs  widget_event_tests.rs
crates/paranoid-gui/ui/: paranoid-tokens.slint  paranoid.slint
crates/paranoid-ops/: Cargo.toml
crates/paranoid-ops/src/: lib.rs  mtls_transport.rs
crates/paranoid-ops/tests/: federal_startup_fixtures.rs  mtls_transport.rs  ops_trace_fixtures.rs
crates/paranoid-ops/tests/fixtures/: federal_startup_denied.json  federal_startup_external_device_ready.json  ops_trace_cli_mutate_allowed.json  ops_trace_gui_export_federal_ready_allowed.json  ops_trace_mtls_process_boundary_allowed.json  ops_trace_tui_device_bound_unlock_allowed.json  ops_trace_tui_keyslot_required_audit_denied.audit.jsonl  ops_trace_tui_keyslot_required_audit_denied.json
crates/paranoid-seal/: Cargo.toml
crates/paranoid-seal/src/: lib.rs
crates/paranoid-vault/: Cargo.toml
crates/paranoid-vault/src/: backup_transfer.rs  clipboard_hardening.rs  kdf_calibration.rs  keyslots.rs  lib.rs  lifecycle.rs  lockout.rs  mem_hardening.rs  native_access.rs  recovery_posture.rs
docs/: ARCHITECTURE.md  ASSESSMENT-GO.md  AUDIT.md  BUILD.md  CLI.md  DESIGN.md  STATE.md  SUPPLY-CHAIN.md  TESTING.md  THREAT-MODEL.md  conf.py  contributing.md  index.md
docs/_static/: custom.css
docs/api/: index.md
docs/design/: brand.md  evidence.md  ia.md  index.md  journeys.md  system.md
docs/getting-started/: downloads.md  index.md  install-and-verify.md
docs/guides/: recovery-operations.md  tui.md
docs/plans/: 2026-02-26-wolfi-migration-design.md
docs/public/: install.sh
docs/reference/: ai-review.md  architecture.md  assurance-claims.md  ci-design.md  compliance-frameworks.md  control-mapping.md  federal-readiness.md  human-review.md  index.md  license.md  messaging.md  platform-installers.md  release-checklist.md  release-verification.md  remaining-work-prd.md  security-assurance.md  supply-chain.md  testing.md  vault-format.md
docs/superpowers/specs/: 2026-04-14-cli-distribution-design.md  2026-04-14-wolfi-builder-and-workflow-consolidation-design.md
include/: paranoid.h  paranoid_frama.h  paranoid_platform.h
patches/: 01-wasi-config.patch  02-rand-wasi.patch  03-ssl-cert-posix-io.patch
scripts/: assert_release_payload.sh  build_openssl_wasm.sh  build_release_artifact.sh  bump_builder_digest.sh  capture_gui_screenshot.sh  cargo_test.sh  check_token_drift.sh  cleanup_legacy_build.sh  configure_local_toolchain.sh  double_compile.sh  generate_pkg_manifests.sh  gui_real_input_macos.swift  hallucination_check.sh  integration_test.sh  macos_sign_notarize.sh  multiparty_verify.sh  release_path_utils.sh  release_validate.sh  security_assurance_gate.py  smoke_test_release_artifact.sh  supply_chain_verify.sh  validate-docs.sh  verify_ai_review_inventory.sh  verify_branch_protection.sh  verify_human_review_inventory.sh  verify_platform_signing.sh  verify_published_release.sh  windows_sign_artifact.sh
src/: cli.c  paranoid.c  platform_native.c  platform_posix.c  platform_wasm.c  sha256_compact.c  sha256_compact.h  wasm_entry.c
supply-chain/: scanner-toolchain.env
tests/: test_cli.sh  test_gui_e2e.sh  test_gui_e2e_local.sh  test_gui_visual_regression.sh  test_munit.c  test_native.c  test_paranoid.c  test_platform_signing_verify.sh  test_security_assurance_gate.py  test_sha256.c  test_statistics.c  test_tui_e2e.py  test_vault_cli.sh
tests/e2e/: package-lock.json  package.json  paranoid.spec.ts  playwright.config.ts
www/: CNAME  app.js  index.html  style.css
xtask/: Cargo.toml
xtask/src/: main.rs
