[workspace]
members = [
    "crates/paranoid-audit",
    "crates/paranoid-core",
    "crates/paranoid-cli",
    "crates/paranoid-gui",
    "crates/paranoid-ops",
    "crates/paranoid-seal",
    "crates/paranoid-vault",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "3.8.0"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Jon Bogaty"]
repository = "https://github.com/jbcom/paranoid-passwd"
homepage = "https://paranoid-passwd.com"
description = "Local-first password manager and generator with native apps, encrypted vault storage, and verifiable releases."
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
arboard = "3.6.1"
crossterm = "0.29.0"
lexopt = "0.3.2"
openssl = { version = "0.10.81", features = ["vendored"] }
paranoid-audit = { path = "crates/paranoid-audit" }
paranoid-core = { path = "crates/paranoid-core" }
paranoid-ops = { path = "crates/paranoid-ops" }
paranoid-seal = { path = "crates/paranoid-seal" }
paranoid-vault = { path = "crates/paranoid-vault" }
ratatui = "0.30.0"
regex = "1.12.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slint = { version = "1.16.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg", "renderer-software", "backend-android-activity-06"] }
slint-build = "1.16.1"
statrs = "0.18.0"
tempfile = "3.20.0"
thiserror = "2.0.18"
zeroize = "1.8.2"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
