[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Repository automation for paranoid-passwd."
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde_json.workspace = true

[lints]
workspace = true
