[package]
name = "paranoid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true

[[bin]]
name = "paranoid-passwd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
crossterm.workspace = true
lexopt.workspace = true
paranoid-core = { path = "../paranoid-core" }
paranoid-ops.workspace = true
paranoid-vault = { path = "../paranoid-vault" }
ratatui.workspace = true
serde_json.workspace = true
zeroize.workspace = true

[dev-dependencies]
keyring = { version = "3.6.3", default-features = false }
openssl.workspace = true
tempfile.workspace = true

[lints]
workspace = true
