[package]
name = "paranoid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true

[lib]
name = "paranoid_cli"
path = "src/lib.rs"

[[bin]]
name = "paranoid-passwd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
crossterm.workspace = true
lexopt.workspace = true
paranoid-audit.workspace = true
paranoid-core.workspace = true
paranoid-ops.workspace = true
paranoid-vault.workspace = true
ratatui.workspace = true
serde_json.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-openssl"] }

[dev-dependencies]
openssl.workspace = true
tempfile.workspace = true

[lints]
workspace = true
