[package]
name = "paranoid-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
openssl.workspace = true
serde.workspace = true
statrs.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true

