[package]
name = "paranoid-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
openssl.workspace = true
paranoid-audit.workspace = true
paranoid-core.workspace = true
paranoid-seal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
